--- a/frontend/FishMaster/src/pages/dashboard/Analytics.module.scss
+++ b/frontend/FishMaster/src/pages/dashboard/Analytics.module.scss
@@ -1,3 +1,11 @@
+// Tank Health Score Row
+.tankHealthScoreRow {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 0.5rem 0 1rem 0;
+  font-size: 1.3rem;
+}
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
 // Colors matching Dashboard
